[package]
name = "urcljit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
cranelift = "0.103.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
egui = "0.24.1"
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[profile.dev.package."*"]
opt-level = 2
