[package]
name = "urcljit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
cranelift = { version = "0.103.0", optional = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"], optional = true}
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
egui = { version = "0.24.1", optional = true }
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
], optional = true }
serde = { version = "1", features = ["derive"], optional = true}
rfd = { version="0.12.1", optional = true }
clap = { version = "4.4.11", optional = true, features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[profile.dev.package."*"]
opt-level = 2

[features]
default = ["cli", "llvm"]
cli = ["dep:clap"]
ide = ["dep:egui", "dep:eframe", "dep:rfd", "dep:serde"]
llvm = ["dep:inkwell"]
cranelift = ["dep:cranelift"]
