[package]
name = "urcljit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
cranelift = { version = "0.103.0", optional = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"], optional = true}
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
egui = { version = "0.24.1" }
eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
clap = { version = "4.4.11", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
codegen-units = 1

[features]
default = ["llvm"]
llvm = ["dep:inkwell"]
cranelift = ["dep:cranelift"]
